<resources>
    <string name="app_name">NavFragment</string>
    <string name="detail_fragment_title">Detail Fragment</string>
    <string name="detail_fragment_to_list_button">to list</string>
    <string name="detail_fragment_to_main_button">to main</string>
    <string name="list_fragment_title">List Fragment</string>
    <string name="list_fragment_to_detail_button">to detail</string>
    <string name="list_fragment_to_main_button">to main</string>
    <string name="main_fragment_title">Main Fragment</string>
    <string name="main_fragment_to_list_button">to list</string>
</resources>