<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ListFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/list_fragment_title" />
    <Button
        android:id="@+id/listToDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_fragment_to_detail_button" />

    <Button
        android:id="@+id/listToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/list_fragment_to_main_button" />
</LinearLayout>

